--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ atomicwrites==1.4.0
 blinker==1.7.0
 click-plugins==1.1.1
 cligj==0.7.2
-dash==2.15.0
+dash==2.9.0
 dash-bootstrap-components==1.5.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
@@ -33,3 +33,7 @@ webencodings==0.5.1
 Werkzeug==3.0.1
 django==4.1
 geopandas==0.14.3
+django_plotly_dash==2.3.1
+django-filter==2.4.0
+django-import-export==2.6.1
+django-crispy-forms==1.14.0
